--- a/trusat/docs/header.css
+++ b/trusat/docs/header.css
@@ -6,7 +6,6 @@
   color: #FC7756;
   text-decoration: none;
   text-transform: uppercase;
-  padding-block-start: 3rem;
 }
 article nav ul {
   display: grid;
