--- a/trusat/docs/main.css
+++ b/trusat/docs/main.css
@@ -12,27 +12,7 @@
   font-style: normal;
   font-weight: normal;
   font-size: 16px;
-  color: #FFFFFF;
-  opacity: 0.5;
+  color: gray;
   width: 755px;
   height: 38px;
 }
-/* main nav ul .par {
-  font-family: Roboto;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 12px;
-  line-height: 14px;
-  display: flex;
-  align-items: flex-end;
-  text-transform: uppercase;
-}
-main nav ul .num {
-  font-family: Roboto;
-  font-style: normal;
-  font-weight: 300;
-  font-size: 24px;
-  line-height: 28px;
-  display: flex;
-  align-items: flex-end;
-} */
