--- a/trusat/docs/masthead.css
+++ b/trusat/docs/masthead.css
@@ -17,5 +17,5 @@ main {
 }
 aside {
  width: 35%;
- margin-inline-start:5%;
+ margin-inline-start:15%;
 }
