--- a/trusat/docs/nav.css
+++ b/trusat/docs/nav.css
@@ -1,22 +1,23 @@
- body > header nav ul {
+ body > header {
   display: flex;
-  flex-wrap: wrap;
-  list-style: none;
-  margin: 0;
-  display: flex;
+  flex-wrap: nowrap;
   flex-direction: row;
   justify-content: space-between;
-  margin-block-start: -4rem;
+  margin-block-start: -2rem;
 }
 body > header nav ul li {
-margin-inline-end: 1rem;
-text-transform: uppercase;
-font-weight: bold;
-font-size: 1.25rem;
-word-spacing: 0.05rem;
-color: #FFFF;
-text-decoration: none;
+  text-transform: uppercase;
+  font-weight: bold;
+  font-size: 1.25rem;
+  color: #FFFF;
+  text-decoration: none;
+  list-style: none;
+  display: inline;
+  word-spacing: 0.5rem;
+  padding-inline-start: 1.5rem;
+
 }
+
 
 
 
